--- a/.github/workflows/visualizer.yml
+++ b/.github/workflows/visualizer.yml
@@ -23,7 +23,7 @@ jobs:
     
     - name: Install Symbolator
       run: |
-        pip install symbolator
+        pip install git+https://github.com/wallento/symbolator.git
     
     - name: Generate block diagrams
       run: |
